--- a/README
+++ b/README
@@ -15,6 +15,8 @@ they are here, working or not
   makehuman - Generate 3D humanoid models
   FreeImage - Image library
   digikam - photo management application (copied and modified from slackbuilds.org)
+  input-wacom - kernel driver for Wacom 
+  xf86-input-wacom - X11 driver for Wacom
 
 ** TESTING/BROKEN **
   luxrender - unbiased rendering engine
