--- a/gimp-painter/README
+++ b/gimp-painter/README
@@ -6,5 +6,5 @@ image manipulation, painting, processing, and rendering tools.  The
 GIMP's open design and extensible architecture make for a very
 powerful end product for photo and image retouching, web graphics
 design, or digital illustration.
-This package contains the path for painter, see
+This package contains the patch for painter, see
 http://sourceforge.jp/projects/gimp-painter
