add Alchemy 008beta sketching tool

--- a/README
+++ b/README
@@ -17,6 +17,8 @@ they are here, working or not
   digikam - photo management application (copied and modified from slackbuilds.org)
   input-wacom - kernel driver for Wacom 
   xf86-input-wacom - X11 driver for Wacom
+  gimp-painter - GIMP for Painter
+  Alchemy - sketching tool
 
 ** TESTING/BROKEN **
   luxrender - unbiased rendering engine
