office/calibre: Updated for version 3.15.0.

--- a/README
+++ b/README
@@ -69,6 +69,7 @@ graphics/draftsight. Updated for version 2018SP0
 graphics/gmic. Updated for version 2.1.8
 graphics/luxrender. Updated for version 1.6.0
 graphics/mypaint. Updated for version 1.2.1
+office/calibre. Updated for version 3.15.0
 office/freemind. Updated for version 1.1.0.beta2
 office/gnucash. Updated for version 2.16.18
 office/scribus. Updated for version 1.5.3
