--- a/README
+++ b/README
@@ -65,6 +65,7 @@ Packages newer than Slackbuilds version
 ---------------------------------------------
 academic/stellarium. Updated for version 0.17.0
 graphics/draftsight. Updated for version 2018SP0
+graphics/hugin. Updated for version 2018.0.0
 graphics/gmic. Updated for version 2.1.8
 graphics/luxrender. Updated for version 1.6.0
 graphics/mypaint. Updated for version 1.2.1
